# edgeorm

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  mypy.ini  pyproject.toml
nodeedge/: __init__.py  constants.py  exceptions.py  mixins.py  types.py
nodeedge/backends/: __init__.py  _loader.py
nodeedge/backends/base/: __init__.py  _field_types.py
nodeedge/backends/edgedb/: __init__.py  _field_types.py
nodeedge/model/: __init__.py  _base_model.py  _model.py  fields.py  models.py
nodeedge/model/_fields/: base_fields.py  field_types.py  link_field_types.py  model_field.py
nodeedge/model/fields/: __init__.py  _field_types.py
nodeedge/query/: __init__.py  _lookup.py
nodeedge/types/: __init__.py  _enum.py
nodeedge/utils/: datetime.py  logging.py  typing.py
tests/: conftest.py  test_mixins.py  test_types.py
tests/_testing/: decorators.py
tests/backends/: test_loader.py
tests/model/fields/: test_field_types.py  test_link_field_types.py  test_model_field.py
