[tool.poetry]
name = "nodeedge"
version = "0.1.0"
description = ""
authors = ["hannal <kay@hannal.net>"]
readme = "README.md"
packages = [
    {include = "nodeedge", from = "./"},
    {include = "testing", from = "./tests/_testing"},
]

[project.urls]
Homepage = 'https://github.com/hannal/nodeedge'
Documentation = 'https://github.com/hannal/nodeedge'
Source = 'https://github.com/hannal/nodeedge'
Changelog = 'https://github.com/hannal/nodeedge'

[tool.poetry.dependencies]
python = "^3.8"
edgedb = "^1.3.0"
pydantic = "^1.10.7"
pytz = "^2023.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
pytest-env = "^0.8.1"
pytest-xdist = "^3.3.0"
pytest-cov = "^4.0.0"
black = "^23.3.0"
ruff = "^0.0.267"
typing-extensions = "^4.5.0"
mypy = "^1.3.0"
pre-commit = "^3.3.2"

[tool.black]
line-length = 100

[tool.pytest.ini_options]
minversion = "7.1.0"
addopts = "-vv --strict-markers --tb=short --no-cov-on-fail --asyncio-mode=auto -p no:warnings --doctest-modules"
python_files = ["tests.py", "test_*.py"]
testpaths = [
    "tests/backends",
    "tests/model",
]
pythonpath = ["./", "./tests/_testing"]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:etcd3.*:",
]
env = []

[tool.ruff]
select = [
    "E",
    "F",
    "I",
]
ignore = [
    "E722",
    "E731",
    "E401",
    "F821",
    "N801",
    "N802",
    "E501",
    "I001",
    # "B008",
    # "B009",
    # "B010",
]
exclude = [
    ".git",
    ".cache",
    ".idea",
    ".egg",
    "__pycache__",
    "venv",
    "dist",
    "build",
    "docs",
    "*.pyi",
    "fixture_builders.py",
    "conftest_*.py",
]
per-file-ignores = {}
line-length = 100
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
target-version = "py311"
task-tags = ["TODO", "FIXME"]

[tool.ruff.mccabe]
max-complexity = 10

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
